@@ -1,0 +1,9 @@
+(import (rnrs)
+        (mosh test))
+
+(test-error assertion-violation? (vector-ref (vector) -1))
+(test-error assertion-violation? (apply vector-ref (list (vector) -1)))
+(test-error assertion-violation? (vector-set! (vector) -1 0))
+(test-error assertion-violation? (apply vector-set! (list (vector) -1 0)))
+
+(test-results)
