@@ -1,5 +1,7 @@
 2009-08-21  higepon  <higepon@users.sourceforge.jp>
 
+	* Added index check on vector-ref, vector-set!, Issue 95 reported by tabe.fixedpoint.
+
 	* ListProcedures.cpp (listEx): Rewrote list in C++.
 
 2009-08-20  higepon  <higepon@users.sourceforge.jp>
